@@ -1,6 +1,3 @@
-# ==========================================================
-# 1) IMAGEM DE BUILD — MAVEN + JAVA 21
-# ==========================================================
 FROM maven:3.9.6-eclipse-temurin-21 AS build
 
 WORKDIR /app
@@ -12,16 +9,16 @@ COPY . .
 
 RUN mvn -q clean package -DskipTests
 
-# ==========================================================
-# 2) IMAGEM FINAL — JRE 21 SLIM
-# ==========================================================
 FROM eclipse-temurin:21-jre
 
 WORKDIR /app
 
 COPY --from=build /app/target/*.jar app.jar
 
-EXPOSE ${PORT}
+COPY entrypoint.sh .
 
-# --enable-native-access=ALL-UNNAMED suprime o warning do sqlite-jdbc no Java 21+
-ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "app.jar"]
+RUN chmod +x entrypoint.sh
+
+EXPOSE 8080
+
+ENTRYPOINT ["./entrypoint.sh"]
